<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".NotesUpdate">

    <TextView
        android:id="@+id/input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enter_date"
        android:inputType="date"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enter_topic"
        android:inputType="textPersonName"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:ems="10"
        android:hint="@string/enter_text"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/update_notes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/note_update"
        android:textColor="@color/cardview_light_background" />


</LinearLayout>